--- a/crates/libcgroups/Cargo.toml
+++ b/crates/libcgroups/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libcgroups"
-version = "0.3.0" # MARK: Version
+version = "v0.4.0" # MARK: Version
 description = "Library for cgroup"
 license-file = "../../LICENSE"
 repository = "https://github.com/containers/youki"
